--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,18 +8,43 @@
 </head>
 <body>
   <header class="site-header">
-    <div class="wrapper">
-      <a class="site-title" href="{{ '/' | relative_url }}">{{ site.title }}</a>
-      <nav class="site-nav">
-        {% for path in site.header_pages %}
-          {% assign page = site.pages | where: "path", path | first %}
-          {% if page.title %}
-            <a class="nav-link" href="{{ page.url | relative_url }}">{{ page.title }}</a>
-          {% endif %}
-        {% endfor %}
-      </nav>
+  <div class="wrapper">
+    
+    <!-- Row 1: Site Title + Mr. House TV -->
+    <div class="header-row ">
+      <div class="header-left">
+        <a class="site-title" href="{{ '/' | relative_url }}">{{ site.title }}</a>
+      </div>
+      <div class="header-right">
+        <div class="mr-house-tv crt-block">
+          <canvas id="mr-house-noise"></canvas>
+          <div class="mr-house-overlay"></div>
+          <div class="mr-house-screen">
+            <img src="{{ '/assets/images/mr-house.png' | relative_url }}" alt="Mr. House" class="mr-house-img">
+          </div>
+          <div class="mr-house-scanlines"></div>
+        </div>
+      </div>
     </div>
-  </header>
+    
+    <!-- Row 2: Tagline + Mr. House Quote -->
+    <div class="header-row header-row-2">
+      <div class="header-left">
+<nav class="site-nav">
+      {% for path in site.header_pages %}
+        {% assign page = site.pages | where: "path", path | first %}
+        {% if page.title %}
+          <a class="nav-link" href="{{ page.url | relative_url }}">{{ page.title }}</a>
+        {% endif %}
+      {% endfor %}
+    </nav>
+      </div>
+      <div class="header-right">
+        <p class="mr-house-quote" id="mr-house-quote-text">"The House always wins."</p>
+      </div>
+    </div>
+  </div>
+</header>
 
   <main class="page-content" aria-label="Content">
     <div class="wrapper">
@@ -33,7 +58,7 @@
     </div>
   </footer>
 
-  <!-- CRT Effect JS (deferred, non-blocking) -->
   <script src="{{ '/assets/js/crt-effect.js' | relative_url }}" defer></script>
+  <script src="{{ '/assets/js/mr-house.js' | relative_url }}" defer></script>
 </body>
 </html>
