--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -224,7 +224,7 @@ h3 {
 /* TV Display (square) */
 .mr-house-tv {
   position: relative;
-  right: 32px;
+  right: 34px;
   width: 60px;
   height: 60px;
   flex-shrink: 0;
@@ -347,9 +347,24 @@ h3 {
   color: var(--text-color);
   text-shadow: 0 0 5px rgba(255, 176, 0, 0.4);
   line-height: 1.3;
+  min-height: 40px;
+  max-height: 40px;
+  overflow: hidden;
+  max-width: 120px;
 }
 
 .mr-house-quote p {
+  margin: 0;
+  font-size: 0.65em;
+  line-height: 1.3;
+  
+  /* Truncate after 2 lines */
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
   margin: 0;
   font-size: 0.65em;
   font-style: italic;
