--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1500,3 +1500,20 @@ body.crt-boot-sequence {
     animation-delay: 1s;
   }
 }
+
+/* Add this to style.scss */
+.table-wrapper {
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+  margin: 2em 0;
+}
+
+table {
+  min-width: 600px; /* Force scroll on mobile */
+}
+
+@media (max-width: 768px) {
+  table {
+    font-size: 0.85em;
+  }
+}
